Added backgroud image and div transpparency

--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,22 @@
 }
 body {
   width: 100%;
-  background-color: white;
+  /*background-color: white;*/
+
+
 }
 #typed-hobbies{
 	font-size: 1.5em;
-	font-family: Monotype-corsiva;
-	font-style: Monotype-corsiva;
+	/*font-family: Roboto;*/
 	font-weight: 100;
 }
 /*Typed wrapped bxox*/
+#title{
+padding: 7% 25% 5% 25%;
+background-image: url(".././images/backflip.jpg");
+background-size: 100%;
+background-repeat: no-repeat;
+}
 .typed-wrap{
 	margin:10px auto;
 	padding:20px;
@@ -22,13 +29,20 @@ body {
 	border-radius:5px;
 	border:#CCC 1px solid;
 }
-/*Temperoryr*/a{
-	text-decoration: none;
-	color:#666;
+
+.wrap-container{
+	background: rgba(20, 20, 20, 0.3);
+	border-radius: 4px;
+	/*opacity: 0.5;*/
+	padding: 0px;
 }
-	a:hover{
-		color:#999;
-	}
+a{
+	text-decoration: none;
+}
+a:hover{
+	color:#FFF;
+	text-decoration: none;
+}
 p{
 	line-height: 2em;
 	margin:0 0 20px;
@@ -36,14 +50,19 @@ p{
 }
 
 .wrap{
-	max-width: 600px;
+	/*background: grey;*/
 	margin:150px auto;
+	opacity: 1;
+	max-width: 800px;
+	padding: 2em;
+	padding-bottom: 1em;
 }
 /*//end*/
 /*For Animated binking cursor*/
 .typed-cursor{
     opacity: 1;
     font-weight: 100;
+    font-size: 1.5em;
     -webkit-animation: blink 0.7s infinite;
     -moz-animation: blink 0.7s infinite;
     -ms-animation: blink 0.7s infinite;
@@ -76,11 +95,89 @@ p{
     100% { opacity:1; }
 }
 
-.icons-block > .fa{
+.icons-block {
+	width: inherit;
+	display: inline-block;
+}
+.icons-block > .icon-item{
+	float: left;
+	width: text-wrap;
 	margin: 2px;
 	padding: 2px;
-	padding-right: 40px;
-	padding-left: 40px;
+	padding-right: 0.6em;
+	padding-left: 0.6em;
+	font-size: 1.65em;
+}
+.fa{
+	padding-top: 10px;
+	width:50px;
+	height:50px;
+	text-align: center;
+	background: white;
+	border-radius: 50%;
+	border-width: 1px;
+	/*border:blue;*/
+	transition: all 0.2s ease;
+	margin: 1em;
+}
+.fa:hover{
+	color:#FFF;
+	background: white;
+	animation: circle-anim 0.2s ease forwards;
+	transition: all 0.2s ease;
+}
+#name{
+	background: rgba(20, 20, 20, 0.6);
+	letter-spacing: 0.4em;
+	color: white;
+	font-size:3em;
+}
+.wrap > p {
+	background: rgba(20, 20, 20, 0.9);
+	color: white;
+}
+
+/*Social media icons*/
+
+.fa-youtube:hover{
+  background: #E5393F;
+}
+
+.fa-twitter:hover{
+  background: #1DA1F3;
+}
+
+.fa-facebook:hover{
+  background: #3B5998;
+}
+
+.fa-linkedin:hover{
+  background: #0077B5;
+}
+
+.fa-reddit:hover{
+  background: #FF4500;
+}
+.fa-instagram:hover{
+  background: #FF4500;
 }
 
 
+
+@keyframes circle-anim{
+0% {
+	box-shadow: 0px 5px 5px 0px #221E15;
+}
+
+/*90%{
+	padding: 0.35em;
+	margin: -0.35em; 
+}*/
+
+100%{
+	/*padding: 0.25em;*/
+	margin-top: 0.75em;
+	box-shadow: 0px 5px 5px 2px #221E15;
+}
+
+/*reference for social icon animation - https://webdeasy.de/en/top-css-buttons-en/*/
