--- a/css/style.css
+++ b/css/style.css
@@ -5,29 +5,28 @@
        url('./fonts/Elianto-Regular.ttf')  format('truetype'); /* Safari, Android, iOS */
 }
 body {
-  width: 100%;
-  /*background-color: white;*/
-
-
+	/*min-width: 850px;*/
+  	width: 100%;
 }
 #typed-hobbies{
-	font-size: 1.5em;
+	font-size: 3vw;
 	/*font-family: Roboto;*/
 	font-weight: 100;
 }
 /*Typed wrapped bxox*/
 #title{
-padding: 7% 25% 5% 25%;
+padding: 7vw 22vw 5vh 22vw;
 background-image: url(".././images/backflip.jpg");
-background-size: 100%;
+background-size: 100vw;
 background-repeat: no-repeat;
+background-attachment: fixed; 
 }
 .typed-wrap{
-	margin:10px auto;
-	padding:20px;
+	margin: 1vw auto;
 	background:#f0f0f0;
 	border-radius:5px;
 	border:#CCC 1px solid;
+	
 }
 
 .wrap-container{
@@ -44,25 +43,28 @@ a:hover{
 	text-decoration: none;
 }
 p{
-	line-height: 2em;
-	margin:0 0 20px;
 	text-align: center;
+}
+
+#heading-hobbies{
+	line-height: 4vw;
+	margin:0 0 2vw;
+	font-size: 2vw;
 }
 
 .wrap{
 	/*background: grey;*/
-	margin:150px auto;
+	margin: 1vw auto;
 	opacity: 1;
-	max-width: 800px;
-	padding: 2em;
-	padding-bottom: 1em;
+	padding: 4vw;
+	padding-bottom: 2vw;
 }
 /*//end*/
 /*For Animated binking cursor*/
 .typed-cursor{
     opacity: 1;
     font-weight: 100;
-    font-size: 1.5em;
+    font-size: 4vw;
     -webkit-animation: blink 0.7s infinite;
     -moz-animation: blink 0.7s infinite;
     -ms-animation: blink 0.7s infinite;
@@ -102,25 +104,24 @@ p{
 .icons-block > .icon-item{
 	float: left;
 	width: text-wrap;
-	margin: 2px;
-	padding: 2px;
-	padding-right: 0.6em;
-	padding-left: 0.6em;
-	font-size: 1.65em;
+	margin: 0.05vw;
+	padding: 0.05vw;
+	padding-right: 0.1vw;
+	padding-left: 0.1vw;
+	font-size: 2.2vw;
 }
-.fa{
-	padding-top: 10px;
-	width:50px;
-	height:50px;
+.fa, .fab{
+	padding-top: 1vw;
+	width:4vw;
+	height:4vw;
 	text-align: center;
 	background: white;
 	border-radius: 50%;
 	border-width: 1px;
-	/*border:blue;*/
 	transition: all 0.2s ease;
-	margin: 1em;
+	margin: 1vw;
 }
-.fa:hover{
+.fa:hover, .fab:hover{
 	color:#FFF;
 	background: white;
 	animation: circle-anim 0.2s ease forwards;
@@ -128,16 +129,46 @@ p{
 }
 #name{
 	background: rgba(20, 20, 20, 0.6);
-	letter-spacing: 0.4em;
+	letter-spacing: 3vw;
 	color: white;
-	font-size:3em;
+	font-size:4vw;
+	line-height: 5vw;
+	padding-bottom: 1vw;
+	margin-bottom: 2.5vw;
 }
 .wrap > p {
 	background: rgba(20, 20, 20, 0.9);
 	color: white;
 }
 
+.mid-content {
+	font-size: 1.3em;
+	line-height: 2em;
+	padding-left: 7vw;
+	padding-right: 7vw;
+	align: center;
+	text-align: justify;
+}
+.first-letter{
+	font-size: 2em;
+	 line-height: 0em;
+}
+
+.quote-span{
+	font-size: 1.6em;
+}
+.quote-name{
+	font-size: 1.6em;
+	text-align: right;
+}
 /*Social media icons*/
+
+.fa-github:hover{
+	color:black;
+}
+.fa-blogger-b:hover{
+	background: #FF4500;
+}
 
 .fa-youtube:hover{
   background: #E5393F;
@@ -159,25 +190,26 @@ p{
   background: #FF4500;
 }
 .fa-instagram:hover{
-  background: #FF4500;
+  /*color: transparent;*/
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  /*background-clip: text;*/
+  /*-webkit-background-clip: text;*/
+  /*Insta shades source - https://stackoverflow.com/questions/38507734/fontawesome-instagram-icon-colorized/49659118*/
 }
 
 
 
 @keyframes circle-anim{
 0% {
-	box-shadow: 0px 5px 5px 0px #221E15;
+	box-shadow: 0px 0.5vw 0.5vw 0px #221E15;
 }
-
-/*90%{
-	padding: 0.35em;
-	margin: -0.35em; 
-}*/
 
 100%{
 	/*padding: 0.25em;*/
-	margin-top: 0.75em;
-	box-shadow: 0px 5px 5px 2px #221E15;
+	margin-top: 0.75vw;
+	box-shadow: 0px 0.5vw 0.5vw 0.2vw #221E15;
 }
 
 /*reference for social icon animation - https://webdeasy.de/en/top-css-buttons-en/*/
+
